--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
+#lock files
+*lock
 
 # testing
 /coverage
@@ -41,5 +43,4 @@ yarn-error.log*
 next-env.d.ts
 .env.development
 
-#lock files
-*lock.*
+
