--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 !.yarn/releases
 !.yarn/versions
 #lock files
-*lock
+*lock*
 
 # testing
 /coverage
@@ -42,5 +42,6 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 .env.development
+
 
 
